# audible-series

./: .pre-commit-config.yaml  environment.yaml  go.mod  go.sum  indicator.go  main.go  pyproject.toml  requirements.txt
audible_plot/: chart.py  render.py
libs/audible-plot/: pyproject.toml
libs/audible-plot-qt/: pyproject.toml
libs/audible-plot-qt/audible_plot_qt/: Main.qml  __init__.py  chart.py  main.py
libs/audible-plot-wx/: pyproject.toml
libs/audible-plot-wx/audible_plot_wx/: __init__.py
libs/audible-plot/audible_plot/: __init__.py  chart.py  generators.py  player.py  render.py  utils.py
notebooks/: audible-data-analysis.ipynb  basic.ipynb  math_funcs.ipynb
sound/: controller.go  generator.go  graph.go  mapper.go  pitch.go  series.go  series_test.go
src/audible_plot/: __init__.py  chart.py  generators.py
src/notebooks/: basic.ipynb  test.ipynb
