[project]
name = "audible-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Francisco Del Roio", email = "francipvb@hotmail.com" }]
requires-python = ">=3.12"
dependencies = ["numpy>=2.1.2", "pandas>=2.2.3", "pyaudio>=0.2.14"]

[project.optional-dependencies]
wx = ["audible-plot-wx"]
qt = ["audible-plot-qt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "pytest>=8.3.3", "ruff>=0.6.9"]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
audible-plot-wx = { workspace = true }
audible-plot-qt = { workspace = true }


[tool.pyright]
typeCheckingMode = "standard"
