[project]
name = "audible-plot-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Francisco Del Roio", email = "francipvb@hotmail.com" }]
requires-python = ">=3.12"
dependencies = ["audible-plot", "audible-plot-qt", "audible-plot-wx"]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "pytest>=8.3.3", "ruff>=0.6.9"]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
audible-plot = { workspace = true }
audible-plot-wx = { workspace = true }
audible-plot-qt = { workspace = true }

[tool.pyright]
typeCheckingMode = "standard"
