[project]
name = "audible-plot-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Francisco Del Roio", email = "francipvb@hotmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "audible-plot",
    "audible-plot-qt",
    "audible-plot-wx",
    "ccxt>=4.4.26",
    # Required by pandas-ta library
    "numpy<2.0.0",
    "pandas-ta>=0.3.14b0",
]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "pytest>=8.3.3", "ruff>=0.6.9"]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
audible-plot = { workspace = true }
audible-plot-wx = { workspace = true }
audible-plot-qt = { workspace = true }
pandas-ta = { git = "https://github.com/twopirllc/pandas-ta" }

[tool.pyright]
typeCheckingMode = "standard"
