[project]
name = "audible-plot-qt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Francisco Del Roio", email = "francipvb@hotmail.com" }]
requires-python = ">=3.12"
dependencies = ["PySide6>=6.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
