[project]
name = "audible-plot-wx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Francisco Del Roio", email = "francipvb@hotmail.com" }]
requires-python = ">=3.12"
dependencies = ["wxpython>=4.2.0", "audible-plot"]

[project.scripts]
audible-plot-wx = "audible_plot_wx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
