[project]
name = "audible-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Francisco Del Roio", email = "francipvb@hotmail.com" }]
requires-python = ">=3.12"
dependencies = ["numpy>=1.26.0", "pandas>=1.5.0", "pyaudio>=0.2.14"]

[project.optional-dependencies]
wx = ["audible-plot-wx"]
qt = ["audible-plot-qt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
